app/assets/stylesheets/main.scss
@import "bootstrap";


$style_color: #5bc;

body {
  color:#666;
  padding: 65px 0;
  font-size: 13px;
}

a {
  color: #3ab;

  &:hover {
    color: #278;
  }
}

.sidebar {
  border-left: 1px solid #eee;
  padding-left: 20px;
}

.navbar-ci {
  .navbar-inner {
    padding: 4px;
    background: $style_color;

    .brand,
    .nav > li > a {
      color: #fff;
      text-shadow: 0 1px 0 #29b;
    }
  }
}

.container-fluid {
  padding: 0 50px;
}

.right {
  float:right;
}

.light {
  color: #888;
}

.project_box {
  color:#777;
  border: 1px solid #ddd;
  margin-right:20px;
  margin-bottom:20px;
  float:left;
  width:330px;

  .title {
    font-size:16px;
    line-height:28px;
    padding: 10px;
  }

  .alert {
    border-radius: 0;
  }

  .body {
    padding:10px;
  }
}

pre.trace {
  background: #000;
  color:#fff;
  font-family: 'Menlo', 'Liberation Mono', 'Consolas', 'Courier New', 'andale mono','lucida console',monospace;
  white-space: pre;
  word-wrap: normal;
  overflow: auto;
  overflow-y: hidden;
}

.autoscroll-container {
  margin-bottom: 5px;
}

.navbar .navbar-inner { border-radius: 0; }

.builds {
  @extend .table;

  .build {
    &.alert{
      margin-bottom: 6px;
    }
    td {
      border-bottom: 1px solid #fff;
    }
  }
}

.btn {
  background: $style_color;
  color: #fff;
  text-shadow: 0 1px 0 #29b;
  border-radius:0;
  &:hover {
    background: #6cd;
    color: #fff;
    text-shadow: 0 1px 0 #29b;
  }

  &.btn-primary {
    background: #29a;
    border:1px solid #279;
  }

  &.btn-danger {
    background: #D33;
    border:1px solid red;
    text-shadow: 0 1px 0 #D44;
  }
}

.well {
  border-radius: 0;
}

.form-actions {
  background: none;
}

.alert {
  border-radius: 0;
}

h3.error { color: #B94A48; }

.padded {
  padding: 20px;
}

.token_widget {
  @extend .alert;
  input {
    padding: 5px;
    margin: 5px;
  }
}

.bold {
    font-weight: bold;
}
.black {
    color: black;
}
.red {
    color: red;
}
.green {
    color: #0E0;
}
.yellow {
    color: yellow;
}
.blue {
    color: blue;
}
.magenta {
    color: magenta;
}
.cyan {
    color: cyan;
}
.white {
    color: white;
}
.grey {
    color: grey;
}

.bordered {
  border: 1px solid #DDD;
  @include box-shadow(0 0 0 3px #eee);
}

form {
  input[type="email"],
  input[type="password"],
  input[type="text"] {
    border-radius: 0;
    padding: 5px;
  }
}

fieldset {
  legend {
    font-size: 18px;
  }
}

.lead {
  font-size: 18px;
}

h3 {
  font-weight: normal;
  color: #666;
}

